    - The command /remove-item-value now also clears the raw value entry set by /set-item-value, preventing it from reappearing after a solver run.
    - The number of items required to be ranked up for the quest "Catalog Completionist" is now dynamic, including rankable modded items.
  Balancing:
    - Changed default sink/generator trade efficiency from 10% to 25%.
    - Rebalanced item values to be less about a planet's stage in the game progression but instead more about actual difficulty of obtainment.
        For example, coal/iron/copper on Vulcanus is now less valuable than on Nauvis, and oil-based products on Fulgora now generally have low values.
    - Item values are now affected by each planet's core challenges:
        Nauvis' items are scaled "normally".
        Vulcanus' items are scaled weakly due to having easy power scaling, plentiful resources, and open building spaces.
        Fulgora's items are scaled strongly due to limited building space and overall complexity of (sustainable) power production.
        Gleba's items are scaled strongly due to item spoilability (requiring special layouts to minimize loss of freshness) and overall complexity of (sustainable) power production.
        Aquilo's items are scaled the strongest due to dependency on interplanetary items (and its distance from other planets) as well as recipe complexity / the number of items and fluids involved in each recipe (since entity heating restricts layouts and sometimes scalability).
  Bugfixes:
    - (TODO) Fixed coin trade "free proc" bug.
    - (TODO) Fixed game crashing when attempting to clear the trade quality selector button's selection.
  Modding:
    - Flagged mods as incompatible: Warp Drive Machine, Voidcraft, Simple Seablock.
---------------------------------------------------------------------------------------------------
Version: 1.6.11
Date: 11/2/26
  Bugfixes:
    - Fixed biter ramming crash.