@@ -357,7 +357,7 @@ data:extend({
         type = "int-setting",
         name = "hextorio-total-hexes-nauvis",
         setting_type = "runtime-global",
-        default_value = 7000,
+        default_value = 5000,
         minimum_value = 100,
         maximum_value = 10000,
         order = "v[world-gen]-p[nauvis]-h[total-hexes]",
@@ -408,7 +408,7 @@ data:extend({
         type = "int-setting",
         name = "hextorio-total-hexes-gleba",
         setting_type = "runtime-global",
-        default_value = 4000,
+        default_value = 1800,
         minimum_value = 100,
         maximum_value = 10000,
         order = "v[world-gen]-q[gleba]-h[total-hexes]",
@@ -425,7 +425,7 @@ data:extend({
         type = "int-setting",
         name = "hextorio-total-hexes-aquilo",
         setting_type = "runtime-global",
-        default_value = 1800,
+        default_value = 600,
         minimum_value = 100,
         maximum_value = 10000,
         order = "v[world-gen]-r[aquilo]-h[total-hexes]",
